...
            ),
          ),
          const SizedBox(height: 32),

          // 标题
          const Text(
            'Application Under Review',
            style: TextStyle(
              fontSize: 24,
              fontWeight: FontWeight.w700,
              color: Color(0xFF212121),
            ),
            textAlign: TextAlign.center,
...
